Details
-
Bug
-
Resolution: Fixed
-
Minor
-
None
-
None
-
3
-
9223372036854775807
Description
The latest master branch with some PCC related patches merged will cause build issue for linux-6.8
make[3]: Entering directory '/home/ubuntu/linux-source-6.8.0'
CC [M] /home/ubuntu/lustre-release/lustre/llite/pcc.o
/home/ubuntu/lustre-release/lustre/llite/pcc.c: In function ‘__pcc_file_reset_projid’:
/home/ubuntu/lustre-release/lustre/llite/pcc.c:3265:40: error: passing argument 1 of ‘inode->i_op->fileattr_set’ from incompatible pointer type [-Werror=incompatible-pointer-types]
3265 | rc = inode->i_op->fileattr_set(&init_user_ns, dentry, &fa);
| ^~~~~~~~~~~~~
| |
| struct user_namespace *
/home/ubuntu/lustre-release/lustre/llite/pcc.c:3265:40: note: expected ‘struct mnt_idmap ’ but argument is of type ‘struct user_namespace ’
Merged for 2.16